--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     })(window,document,'script','dataLayer','GTM-5C28HN7');</script>
     <!-- End Google Tag Manager -->
     <script src="https://kit.fontawesome.com/48654792fb.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap">
@@ -177,7 +177,7 @@
             </div>
             <div class="row" id="advance_details">
                 <div class="col" id="ad_1">
-                        <div style="font-size: 1.2rem; font-weight: 600;"> LIVE CLASSES 👩‍💻 MINI BATCHES 👩‍💻 EMI AVAILABLE</div>
+                        <div style="font-size: 1.2rem; font-weight: 600;"> LIVE CLASSES  MINI BATCHES  EMI AVAILABLE</div>
 
                         <div style="font-size: 1rem; font-weight: 400;">
                         <br>
