--- a/about_us.html
+++ b/about_us.html
@@ -38,7 +38,7 @@
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="navbar-nav">
                         <li class="nav-item" style="height: 40px;"><a class="nav-link active nav-1" href="home" style="color: #ffffff;margin-right: 20px;">Home</a></li>
-                        <li class="nav-item" style="max-width: 130px;height: 40px;"><a class="nav-link nav-2" href="masterclass/" style="color: rgb(255,255,255);min-width: 110px;padding-right: 20px;margin-right: 0px;padding-left: 0px;margin-left: 0px;">MasterClass</a></li>
+                        <li class="nav-item" style="max-width: 130px;height: 40px;"><a class="nav-link nav-2" href="bootcamp/" style="color: rgb(255,255,255);min-width: 110px;padding-right: 20px;margin-right: 0px;padding-left: 0px;margin-left: 0px;">Bootcamp</a></li>
                         <li class="nav-item"><a class="nav-link nav-3" href="/#pricing" style="color: rgb(255,255,255);">Pricing</a></li>
                         <li class="nav-item"><a class="nav-link nav-4" href="about" style="color: rgb(255,255,255);min-width: 105px;">About Us</a></li>
                         <li class="nav-item"><a class="nav-link nav-5" href="contact" style="color: rgb(255,255,255);min-width: 117px;">Contact Us</a></li>
