--- a/contact_us.html
+++ b/contact_us.html
@@ -38,7 +38,7 @@
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="navbar-nav">
                         <li class="nav-item" style="height: 40px;"><a class="nav-link active nav-1" href="home" style="color: #ffffff;margin-right: 20px;">Home</a></li>
-                        <li class="nav-item" style="max-width: 130px;height: 40px;"><a class="nav-link nav-2" href="masterclass/" style="color: rgb(255,255,255);min-width: 110px;padding-right: 20px;margin-right: 0px;padding-left: 0px;margin-left: 0px;">MasterClass</a></li>
+                        <li class="nav-item" style="max-width: 130px;height: 40px;"><a class="nav-link nav-2" href="bootcamp/" style="color: rgb(255,255,255);min-width: 110px;padding-right: 20px;margin-right: 0px;padding-left: 0px;margin-left: 0px;">Bootcamp</a></li>
                         <li class="nav-item"><a class="nav-link nav-3" href="/#pricing" style="color: rgb(255,255,255);">Pricing</a></li>
                         <li class="nav-item"><a class="nav-link nav-4" href="about" style="color: rgb(255,255,255);min-width: 105px;">About Us</a></li>
                         <li class="nav-item"><a class="nav-link nav-5" href="contact" style="color: rgb(255,255,255);min-width: 117px;">Contact Us</a></li>
@@ -140,7 +140,7 @@
         <div class="row">
             <div class="col-sm-6 col-md-4 footer-navigation">
                 <h3><a href="/" style="background: url(&quot;assets/img/hackersvilla_white.png&quot;) center / cover no-repeat;padding: 6px;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></h3>
-                <p class="links"><a href="home">Home</a><strong> · </strong><a href="masterclass/">MasterClass</a><strong> · </strong><a href="/#pricing">Pricing</a><strong> · </strong><a href="about">About</a><strong> · </strong><a href="/#faq">Faq</a><strong> · </strong><a href="contact">Contact</a><br><a href="terms">Terms and Conditions</a><strong> · </strong><a href="privacy">Privacy</a><strong> · </strong><a href="refund">Refund Policies</a></p>
+                <p class="links"><a href="home">Home</a><strong> · </strong><a href="bootcamp/">Bootcamp</a><strong> · </strong><a href="/#pricing">Pricing</a><strong> · </strong><a href="about">About</a><strong> · </strong><a href="/#faq">Faq</a><strong> · </strong><a href="contact">Contact</a><br><a href="terms">Terms and Conditions</a><strong> · </strong><a href="privacy">Privacy</a><strong> · </strong><a href="refund">Refund Policies</a></p>
                 <p class="company-name"><br>HackersVilla Cybersecurity Pvt Ltd&nbsp;© 2023</p>
             </div>
             <div class="col-sm-6 col-md-4 footer-contacts">
