--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="navbar-nav">
                         <li class="nav-item" style="height: 40px;"><a class="nav-link active nav-1" href="home" style="color: #ffffff;margin-right: 20px;">Home</a></li>
-                        <li class="nav-item" style="max-width: 130px;height: 40px;"><a class="nav-link nav-2" href="webinar/" style="color: rgb(255,255,255);min-width: 110px;padding-right: 20px;margin-right: 0px;padding-left: 0px;margin-left: 0px;">Free Webinar</a></li>
+                        <li class="nav-item" style="max-width: 130px;height: 40px;"><a class="nav-link nav-2" href="webinar/" style="color: rgb(255,255,255);min-width: 110px;padding-right: 20px;margin-right: 0px;padding-left: 0px;margin-left: 0px;">Webinar</a></li>
                         <li class="nav-item"><a class="nav-link nav-3" href="/#pricing" style="color: rgb(255,255,255);">Pricing</a></li>
                         <li class="nav-item"><a class="nav-link nav-4" href="about" style="color: rgb(255,255,255);min-width: 105px;">About Us</a></li>
                         <li class="nav-item"><a class="nav-link nav-5" href="contact" style="color: rgb(255,255,255);min-width: 117px;">Contact Us</a></li>
@@ -256,7 +256,7 @@
                         <br>
                         <ul class="fa-ul">
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>Exclusive Basic to Advanced Security Journal worth ₹500</li>
-                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Access to all paid MasterClasses and Bootcamps</li>
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Access to all paid MasterClasses and zs</li>
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>Access to join any ongoing live/offline/recorded batch anytime</li>
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>Lifetime Mentor Support on our Discord</li>
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>Lifetime access to all resources and tools for free</li>
@@ -755,7 +755,8 @@
         <div class="row">
             <div class="col-sm-6 col-md-4 footer-navigation">
                 <h3><a href="/" style="background: url(&quot;assets/img/hackersvilla_white.png&quot;) center / cover no-repeat;padding: 6px;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></h3>
-                <p class="links"><a href="home">Home</a><strong> · </strong><a href="webinar/">Free Webinar</a><strong> · </strong><a href="/#pricing">Pricing</a><strong> · </strong><a href="about">About</a><strong> · </strong><a href="/#faq">Faq</a><strong> · </strong><a href="contact">Contact</a><br><a href="terms">Terms and Conditions</a><strong> · </strong><a href="privacy">Privacy</a><strong> · </strong><a href="refund">Refund Policies</a></p>
+                <p class="links"><a href="home">Home</a><strong> · </strong><a href="webinar/">Free
+                     Webinar</a><strong> · </strong><a href="/#pricing">Pricing</a><strong> · </strong><a href="about">About</a><strong> · </strong><a href="/#faq">Faq</a><strong> · </strong><a href="contact">Contact</a><br><a href="terms">Terms and Conditions</a><strong> · </strong><a href="privacy">Privacy</a><strong> · </strong><a href="refund">Refund Policies</a></p>
                 <p class="company-name"><br>HackersVilla Cybersecurity Pvt Ltd&nbsp;© 2023</p>
             </div>
             <div class="col-sm-6 col-md-4 footer-contacts">
