--- a/contact_us.html
+++ b/contact_us.html
@@ -140,7 +140,7 @@
         <div class="row">
             <div class="col-sm-6 col-md-4 footer-navigation">
                 <h3><a href="/" style="background: url(&quot;assets/img/hackersvilla_white.png&quot;) center / cover no-repeat;padding: 6px;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></h3>
-                <p class="links"><a href="home">Home</a><strong> · </strong><a href="bootcamp/">Bootcamp</a><strong> · </strong><a href="/#pricing">Pricing</a><strong> · </strong><a href="about">About</a><strong> · </strong><a href="/#faq">Faq</a><strong> · </strong><a href="contact">Contact</a><br><a href="terms">Terms and Conditions</a><strong> · </strong><a href="privacy">Privacy</a><strong> · </strong><a href="refund">Refund Policies</a></p>
+                <p class="links"><a href="home">Home</a><strong> · </strong><a href="bootcamp/">Bootcamp</a><strong> · </strong><a href="/#pricing">Pricing</a><strong> · </strong><a href="about">About</a><strong> · </strong><a href="/#faq">Faq</a><strong> · </strong><a href="contact">Contact</a><br><a href="terms">Terms and Conditions</a><strong> · </strong><a href="privacy">Privacy</a><strong> · </strong><a href="refund">Refund Policies</a><strong> · </strong><a href="shipping-and-delivery">Shipping and Delivery Policy</a></p>
                 <p class="company-name"><br>HackersVilla Cybersecurity Pvt Ltd&nbsp;© 2023</p>
             </div>
             <div class="col-sm-6 col-md-4 footer-contacts">
